fixed gap

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,7 +22,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 22px;
   background-color: $white;
   max-width: 320px;
   height: 500px;
